--- a/index.html
+++ b/index.html
@@ -354,11 +354,13 @@
 
             <div class="tabs-wrapper">
                 <div class="tabs-header">
-                    <button class="tab-btn active" onclick="openTab(event, 'day1')">Day 1: Strategy</button>
-                    <button class="tab-btn" onclick="openTab(event, 'day2')">Day 2: Goals</button>
-                    <button class="tab-btn" onclick="openTab(event, 'day3')">Day 3: Candor</button>
-                    <button class="tab-btn" onclick="openTab(event, 'day4')">Day 4: Process</button>
-                    <button class="tab-btn" onclick="openTab(event, 'day5')">Day 5: Ownership</button>
+                    <button class="tab-btn active" onclick="openTab(event, 'day1')">Day 1</button>
+                    <button class="tab-btn" onclick="openTab(event, 'day2')">Day 2</button>
+                    <button class="tab-btn" onclick="openTab(event, 'day3')">Day 3</button>
+                    <button class="tab-btn" onclick="openTab(event, 'day4')">Day 4</button>
+                    <button class="tab-btn" onclick="openTab(event, 'day5')">Day 5</button>
+                    <button class="tab-btn" onclick="openTab(event, 'day6')">Day 6</button>
+                    <button class="tab-btn" onclick="openTab(event, 'day7')">Day 7</button>
                 </div>
 
                 <div id="day1" class="tab-content active">
@@ -400,6 +402,23 @@
                     <hr style="border: 0; border-top: 1px solid #eee; margin: 1.5rem 0;">
                     <p><strong>06:00 PM The Debrief:</strong> True accountability feels like support when the goals are clear.</p>
                 </div>
+
+                <div id="day6" class="tab-content">
+                    <span class="rep-badge">The "Climbing Partner" Check</span>
+                    <h3>Teach to Learn</h3>
+                    <p style="margin-top: 1rem;"><strong>08:00 AM The Rep:</strong> Meet with a junior leader. Teach them the CRO Framework. Explain that their job is to repeat the "Why" so often that their team can say it in their sleep.</p>
+                    <hr style="border: 0; border-top: 1px solid #eee; margin: 1.5rem 0;">
+                    <p><strong>06:00 PM The Debrief:</strong> By teaching the "Echo," did you find a part of your own strategy that you haven't been repeating enough?</p>
+                </div>
+
+                <div id="day7" class="tab-content">
+                    <span class="rep-badge">The Master Alignment Loop</span>
+                    <h3>Confirm the Route</h3>
+                    <p style="margin-top: 1rem;"><strong>08:00 AM The Rep:</strong> Review the "Burn" vs. "Velocity." Does the team's daily activity reflect the Board's expectations? Prepare your Repeating Script for next week.</p>
+                    <hr style="border: 0; border-top: 1px solid #eee; margin: 1.5rem 0;">
+                    <p><strong>06:00 PM The Debrief:</strong> Are the goals you agreed upon still the right ones? Your final rep is confirming the route before the next week's ascent.</p>
+                </div>
+
             </div>
         </div>
     </section>
