--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             padding: 100px 20px;
         }
         .hero h1 { font-size: 3rem; margin-bottom: 20px; line-height: 1.1; }
-        .hero p { max-width: 600px; margin: 0 auto 30px; font-size: 1.2rem; color: #ccc; }
+        /* Updated Paragraph Style */
+        .hero p { max-width: 700px; margin: 0 auto 30px; font-size: 1.25rem; color: #ccc; }
 
         /* Pillars Grid */
         .section { padding: 80px 0; }
@@ -159,7 +160,7 @@
     <section class="hero">
         <div class="container">
             <h1>Leadership is a Muscle<br>Not a Title</h1>
-            <p>We treat leadership like rock climbing. Move from 'knowing' to 'practicing' through the daily discipline of high-stakes interpersonal clarity.</p>
+            <p>Most leadership development is broken because it treats leadership as a concept to be studied rather than a skill to be trained. It’s like reading a book about rock climbing but never touching a wall.</p>
             <a href="#program" class="btn">Start Your Ascent</a>
         </div>
     </section>
